--- a/src/assets/instagram.css
+++ b/src/assets/instagram.css
@@ -7,3 +7,17 @@
     height: calc(100vh - 4rem);
   }
 }
+
+.stories-scrollbar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: white;
+}
+
+.stories-scrollbar::-webkit-scrollbar {
+  height: 4px;
+  width: 4px;
+}
+
+.stories-scrollbar::-webkit-scrollbar-thumb {
+  background-color: #8e8e8e;
+}
